Lots of changes - Long Time Coming
-Keep API taking shape: Using an unofficial library to connect makes me nervous but it is necessary as the official one is blocked behind the enterprise paywall
-Keep API just needs to gather ingredients and format them to work with the current library and to set it up the rest of the way following documentation
-Ingredients are sorted and amounts correctly applied (NEED TO TEST)
-Still need to write code for send menu display

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# User Generated Files
+auth.json
+permissions.json
+gkeepapi-test.py
+note_class.py
+ztest.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
