--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # User Generated Files
 auth.json
-permissions.json
+collab.json
 gkeepapi-test.py
 note_class.py
+permissions.json
 ztest.py
 
 # Byte-compiled / optimized / DLL files
